# anime-sub-translate

./: .env.example  .gitignore  README.md  Taskfile.yaml  __main__.py  cost.py  llm.py  logger.py  main.py  production_litellm.py  progress.py  pyproject.toml  setting.py  speedometer.py  store.py  subtitle_types.py  test_cost.py  test_llm.py  test_main.py  test_progress.py  test_speedometer.py  test_store.py  test_translate.py  test_utils.py  translate.py  utils.py
anilist/: __init__.py  __main__.py  base.py  test_base.py
format/: __init__.py  format.py  srt_format.py  ssa_format.py  test_srt_format.py  test_ssa_format.py  test_subtitle_format_srt.py  test_subtitle_format_ssa.py
llm/: __init__.py  base.py  base_task.py  dto.py  error.py  term_bank_task.py  test_base.py  test_base_task.py  test_dto.py  test_term_bank_task.py  test_translate_task.py  translate_task.py  utils.py
