[project]
name = "anime-sub-translate-zh-tw"
version = "0.1.0"
description = "A anime subtitle translator script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.65.4.post1",
    "pydantic>=2.11.2",
    "pysubs2>=1.8.0",
    "srt>=3.5.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "ruff>=0.11.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
